--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
         "json-server": "^0.17.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-query": "^3.39.3",
         "react-redux": "^9.0.4",
         "react-scripts": "5.0.1",
+        "redux-thunk": "^3.1.0",
         "typescript": "^4.4.2",
         "util": "^0.12.5",
         "uuidv4": "^6.2.13",
