--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-redux": "^9.0.4",
         "react-scripts": "5.0.1",
         "redux-thunk": "^3.1.0",
+        "styled-components": "^6.1.1",
         "typescript": "^4.4.2",
         "util": "^0.12.5",
         "uuidv4": "^6.2.13",
